--- a/public/hakkem/css/MainPages/Main/AboutUs.css
+++ b/public/hakkem/css/MainPages/Main/AboutUs.css
@@ -7,7 +7,10 @@ body {
 /* ---------------
 Header - Footer CSS 
  --------------- */
-.center {
+a{
+  text-decoration: none;
+}
+ .center {
   display: flex;
   justify-content: center;
 }
@@ -148,7 +151,7 @@ Section 1 CSS
   width: 100%;
   height: 90vh;
   background-size: cover;
-  background-image: url("/public/images/About-us/aboutus-section1.png");
+  background-image: url("../../../images/About-us/AboutUs-BG.png");
   top: 0;
   left: 0;
 }
