--- a/public/hakkem/css/MainPages/Main/Home.css
+++ b/public/hakkem/css/MainPages/Main/Home.css
@@ -136,7 +136,7 @@ Section 1 CSS
   position: relative;
   height: 100vh;
   width: 100%;
-  background-image: url(/public/images/Home/Home_Section1.png);
+  background-image: url(../../../images/Home/Home_Section1.png);
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
