--- a/public/hakkem/css/UniversityPages/FM_Researcher/My_Profile.css
+++ b/public/hakkem/css/UniversityPages/FM_Researcher/My_Profile.css
@@ -19,7 +19,7 @@ body {
   padding: 15px;
   border-radius: 10px; /* جعل الحواف أكثر نعومة */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* إضافة ظل مطابق */
-  min-height: 400px; /* ضمان أن يكون الطول مناسبًا */
+  height: 280px; /* ضمان أن يكون الطول مناسبًا */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -133,7 +133,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 750px; /* منع التمدد الزائد */
   position: relative;
-  margin: 0 auto;
+  margin: 30px;
 }
 
 .file-box {
