--- a/public/hakkem/css/Universty/IT Admin/CreateUsr.css
+++ b/public/hakkem/css/Universty/IT Admin/CreateUsr.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Gravitas+One&family=Halant:wght@300;400;500;600;700&display=swap");
 
+
+a{
+    text-decoration: none;
+}
 /* Body */
 body,
 html {
