--- a/public/hakkem/css/Universty/IT Admin/ManageUsers.css
+++ b/public/hakkem/css/Universty/IT Admin/ManageUsers.css
@@ -1,5 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Gravitas+One&family=Halant:wght@300;400;500;600;700&display=swap");
 
+
+.role-input{
+    margin-top: 58px;
+}
+.permission-item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .permissions {
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+  }
+
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
 /* Body */
 body {
     display: flex !important;
@@ -324,12 +346,14 @@ body {
 
 .action-btn {
     background-color: #C6E2DB;
+    width: 70px;
     border: none;
     padding: 6px 12px;
     border-radius: 15px;
     font-weight: bold;
     font-size: small;
-    margin-right: 5px;
+    /* margin-right: 5px; */
+    margin: 5px;
     cursor: pointer;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
