--- a/public/hakkem/css/Universty/IT Admin/MyProfile.css
+++ b/public/hakkem/css/Universty/IT Admin/MyProfile.css
@@ -7,7 +7,9 @@ html {
     padding: 0;
     overflow-x: hidden;
 }
-
+a{
+    text-decoration: none;
+}
 /* Header */
 header {
     position: fixed;
