--- a/public/hakkem/css/Universty/PromotionAdmin/MyProfile.css
+++ b/public/hakkem/css/Universty/PromotionAdmin/MyProfile.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Gravitas+One&family=Halant:wght@300;400;500;600;700&display=swap");
 
 /* Body */
+.container{
+    display: flex;
+    margin: 10px;
+}
+
 body,
 html {
     margin: 0;
