--- a/public/hakkem/css/MainPages/Requests_Updated/ThroughIndRevsOptions.css
+++ b/public/hakkem/css/MainPages/Requests_Updated/ThroughIndRevsOptions.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Inria+Sans:700");
 
+
+a{
+  text-decoration: none;
+}
+
 /* Overlay Settings */
 .overlay {
   display: none;
