--- a/public/hakkem/css/UniversityPages/FM_Researcher/Request_Details.css
+++ b/public/hakkem/css/UniversityPages/FM_Researcher/Request_Details.css
@@ -8,6 +8,7 @@ body {
 
 /* ✅ ضبط حاوية العناصر */
 
+
 .container {
     display: flex;
     flex-direction: column;
@@ -19,6 +20,7 @@ body {
 
 /* ✅ إعادة تنسيق البوكس العلوي (Request Details) */
 .page-header {
+    margin-top: 120px;
     background: white;
     padding: 15px 20px;
     border-radius: 10px;
@@ -28,7 +30,7 @@ body {
     text-align: left;
     font-size: 14px;
     font-weight: normal;
-    margin-bottom: 20px;
+    margin-bottom: 220px;
 }
 .request-info {
     display: flex;
@@ -79,6 +81,7 @@ body {
 
 /* ✅ ضبط الجدول بحيث يتناسق مع البوكس العلوي */
 .content {
+    margin-top: 280px;
     width: 100%;
     max-width: 1100px;
     background: white;
