--- a/public/hakkem/css/Universty/PromotionAdmin/PromotionRequests.css
+++ b/public/hakkem/css/Universty/PromotionAdmin/PromotionRequests.css
@@ -1,3 +1,12 @@
+.container{
+    display: flex;
+    margin: 10px;
+}
+
+.page-content{
+    width: 1300px;
+}
+
 body {
     font-family: "Segoe UI", sans-serif;
     background-color: #f8f8f8;
@@ -14,7 +23,7 @@ body {
     background: #f0f0f0;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(8, 6, 6, 0.1);
-    margin-left: 300px;
+    margin-left: 30px;
     margin-top: 90px;
     width: 50%;
 }
@@ -44,7 +53,7 @@ body {
     border-left: 10px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     width: 50%;
-    margin-left: 300px;
+    margin-left: 30px;
 }
 
 .row {
