--- a/public/hakkem/css/Universty/PromotionAdmin/Reviewers-list.css
+++ b/public/hakkem/css/Universty/PromotionAdmin/Reviewers-list.css
@@ -1,3 +1,9 @@
+.container2{
+    display: flex;
+    margin: 10px;
+}
+
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
@@ -5,9 +11,9 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    width: 900px;
     margin-top: 90px;
-    margin-left: 300px;
+    margin-left: 30px;
 }
 
 .specialization-card {
