--- a/public/hakkem/css/Universty/IT Admin/CreateUsr.css
+++ b/public/hakkem/css/Universty/IT Admin/CreateUsr.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Gravitas+One&family=Halant:wght@300;400;500;600;700&display=swap");
 
+
+.page-content{
+    margin-top: 90px;
+}
 h2{
     margin-top: 100px;
     margin-left: 35px;
@@ -139,7 +143,7 @@ body {
 .form-group {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 270px;
 }
 
 /* تسميات الحقول */
