--- a/public/hakkem/css/Universty/IT Admin/ManageUsers.css
+++ b/public/hakkem/css/Universty/IT Admin/ManageUsers.css
@@ -1,6 +1,46 @@
 @import url("https://fonts.googleapis.com/css2?family=Gravitas+One&family=Halant:wght@300;400;500;600;700&display=swap");
 
 
+
+.custom-pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin-top: 20px;
+  }
+  
+  .custom-pagination .arrow {
+    font-size: 24px;
+    color: #154734;
+    background-color: #e6f0eb;
+    padding: 6px 12px;
+    border-radius: 50%;
+    text-decoration: none;
+    transition: 0.3s;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  }
+  
+  .custom-pagination .arrow:hover {
+    background-color: #c9e4d9;
+  }
+  
+  .custom-pagination .arrow.disabled {
+    color: #999;
+    background-color: #f0f0f0;
+    cursor: default;
+    pointer-events: none;
+  }
+  
+  .custom-pagination .page-number {
+    font-weight: bold;
+    font-size: 16px;
+    color: #333;
+  }
+
+
+
 .form-group-inline2 {
     position: absolute;
     top: 200px;
@@ -174,14 +214,14 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.18);
     padding: 20px;
     border-radius: 8px;
-    width: 700px;
+    width: 900px;
     margin-left:40px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     margin-top: 90px;
 }
 
 .member-table {
-    width: 100%;
+    width: 900px;
     border-collapse: collapse;
 }
 
@@ -228,6 +268,7 @@ a.action-btn {
 }
 
 .add-member-btn {
+    
     background-color: #0B3322;
     color: white;
     padding: 10px 18px;
