--- a/public/hakkem/css/Universty/IT Admin/Permission.css
+++ b/public/hakkem/css/Universty/IT Admin/Permission.css
@@ -5,6 +5,31 @@ a{
     text-decoration: none;
 }
 
+.form-group {
+    display: flex;
+    flex-direction: column;
+    width: 270px;
+    
+}
+
+/* تسميات الحقول */
+.form-group label {
+    padding: 10px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: black;
+}
+
+/* الحقول */
+input, select {
+    width: 100%;
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: rgba(241, 241, 241, 0.4);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    color: gray;
+}
 
 body,
 html {
@@ -123,7 +148,6 @@ body {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     margin-top: 90px;
     display: flex;
-    flex-direction: column;
     gap: 20px;
   }
 
@@ -157,8 +181,6 @@ body {
   }
 
  
-
-
   .permission-label {
     font-weight: bold;
     margin-top: 10px;
@@ -181,15 +203,16 @@ body {
   /* تنسيق الأزرار */
   .permission-buttons {
     display: flex;
-    justify-content: center;
-    gap: 30px;
-    margin-top: 10px;
+    gap: 20px;
+    margin-top: 20px;
   }
 
 
 
   .cancel-btn,
   .modify-btn {
+    height: 38px;
+    margin-right: 30px;
     background-color: #0b3322;
     color: white;
     padding: 10px 25px;
