--- a/public/hakkem/css/Universty/IT Admin/ManageUsers.css
+++ b/public/hakkem/css/Universty/IT Admin/ManageUsers.css
@@ -66,6 +66,7 @@
   }
 
 
+
 .container2 {
     display: flex;
     margin: 20px;
@@ -74,16 +75,23 @@
     margin-top: 58px;
 }
 .permission-item {
+    width: 130px;
+    padding: 8px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    background-color: rgba(241, 241, 241, 0.4);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    font-size: 14px;
+
     display: flex;
-    direction: ltr;
-    text-align: left;
+    margin: 8px;
     gap: 8px;
   }
 
   .permissions {
     direction: ltr;
     padding: 30px 0px;
-    margin-top: 70px;
+    margin-top: 90px;
     display: flex;
     flex-direction: column;
     gap: 10px; 
