--- a/public/hakkem/css/Universty/IT Admin/Permission.css
+++ b/public/hakkem/css/Universty/IT Admin/Permission.css
@@ -4,11 +4,15 @@
 a{
     text-decoration: none;
 }
-
-.form-group {
+.form-item{
+    width: 45%; /* كل عنصر ياخذ تقريبًا نصف العرض */
     display: flex;
     flex-direction: column;
-    width: 270px;
+}
+.form-group {
+    display: flex;
+    flex-wrap: wrap; /* عشان لو ضاقت الشاشة تنزل العناصر */
+    gap: 20px; /* مسافة بين العناصر */
     
 }
 
@@ -147,21 +151,23 @@ body {
     margin-left: 30px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     margin-top: 90px;
-    display: flex;
-    gap: 20px;
+    margin-bottom: 90px;
+    /* display: flex; */
+    gap: 10px;
   }
+
 
   .grant-title {
     text-align: center;
-    font-size: 22px;
+    font-size: 26px;
     font-weight: bold;
     margin-bottom: 10px;
   }
 
   .form-group-inline {
-    display: flex;
-    align-items: center;
-    gap: 15px;
+    /* display: flex; */
+    /* align-items: center; */
+    gap: 5px;
 
   }
 
