--- a/public/hakkem/css/UniversityPages/FM_Reviewer/My_Profile.css
+++ b/public/hakkem/css/UniversityPages/FM_Reviewer/My_Profile.css
@@ -198,11 +198,13 @@ form {
 }
 /* ✅ تحسين محاذاة وتنسيق بطاقة التقييم */
 .reviewer-rate {
+  margin: 20px;
+  margin-top: 900;
   background: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 250px;
+  width: 240px;
   text-align: left;
   align-self: flex-start; /* ✅ محاذاته مع البروفايل */
 }
