--- a/public/hakkem/css/Universty/PromotionAdmin/Accept-Reject-Request.css
+++ b/public/hakkem/css/Universty/PromotionAdmin/Accept-Reject-Request.css
@@ -175,11 +175,18 @@ th {
     color: white;
 }
 
-/* .reject {
+.reject {
     background-color: #d9534f;
     color: white;
+    padding: 12px;
+    border-radius: 12px;
+    margin: 10px;
 }
 .accept {
     background-color: #2c9c69;
     color: white;
-} */
+    padding: 12px;
+    border-radius: 12px;
+    margin: 10px;
+
+}
