--- a/public/hakkem/css/Universty/PromotionAdmin/PromotionRequests.css
+++ b/public/hakkem/css/Universty/PromotionAdmin/PromotionRequests.css
@@ -25,7 +25,7 @@ body {
     box-shadow: 0 4px 8px rgba(8, 6, 6, 0.1);
     margin-left: 30px;
     margin-top: 90px;
-    width: 50%;
+    width: 80%;
 }
 
 .tabs button {
@@ -52,7 +52,7 @@ body {
     margin-bottom: 10px;
     border-left: 10px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-    width: 50%;
+    width: 90%;
     margin-left: 30px;
 }
 
@@ -122,7 +122,7 @@ body {
 
 .view {
     background-color: #6c8c75;
-    color: white;
+    color: #2f4f4f;
 }
 .track {
     background-color: #e0f0eb;
