Complete promotion request 80%

--- a/public/hakkem/css/MainPages/Requests_Updated/Promotion-Request.css
+++ b/public/hakkem/css/MainPages/Requests_Updated/Promotion-Request.css
@@ -3,6 +3,11 @@ body {
     font-family: "Inria Sans";
 }
 
+a{
+    color: #ffffff;
+    text-decoration: none;
+}
+
 * {
     box-sizing: border-box;
     line-height: normal;
