--- a/public/hakkem/css/MainPages/SignIn-SignUp/UniversitySignUpForm.css
+++ b/public/hakkem/css/MainPages/SignIn-SignUp/UniversitySignUpForm.css
@@ -6,7 +6,10 @@ body {
   padding: 0;
   overflow-x: hidden;
 }
-
+a{
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+}
 .logo-section {
   position: absolute;
   top: 5px;
