--- a/public/hakkem/css/Journals/Accepted-Request.css
+++ b/public/hakkem/css/Journals/Accepted-Request.css
@@ -230,3 +230,37 @@ th {
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
     color: black;
 }
+
+.footer-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.footer-buttons button {
+    background-color: #0b3322;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    padding: 10px 20px;
+    border-radius: 15px;
+    cursor: pointer;
+    align-items: center;
+    font-weight: bold;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+    color: white;
+}
+
+.reject {
+    background-color: #d9534f;
+    color: white;
+    padding: 12px;
+    border-radius: 12px;
+    margin: 10px;
+}
+.accept {
+    background-color: #2c9c69;
+    color: white;
+    padding: 12px;
+    border-radius: 12px;
+    margin: 10px;
+}
