--- a/public/hakkem/css/Journals/Choose-Ed.css
+++ b/public/hakkem/css/Journals/Choose-Ed.css
@@ -22,7 +22,7 @@ table {
 }
 
 thead {
-    background-color: #004d40;
+    background-color: #0b3322;
     color: white;
 }
 
@@ -38,7 +38,7 @@ td {
 }
 
 .send-btn {
-    background-color: #004d40;
+    background-color: #0b3322;
     color: white;
     border: none;
     padding: 6px 16px;
