--- a/public/hakkem/css/Journals/Associated-Ed/Accepted-Request.css
+++ b/public/hakkem/css/Journals/Associated-Ed/Accepted-Request.css
@@ -25,7 +25,7 @@ body {
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     justify-self: center;
-    margin-bottom: 20px;
+    margin-bottom: 80px;
 }
 .header {
     display: flex;
@@ -348,4 +348,38 @@ th {
     float: right;
     margin-right: 5%;
     margin-bottom: 80px;
+}
+
+.footer-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.footer-buttons button {
+    background-color: #0b3322;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    padding: 10px 20px;
+    border-radius: 15px;
+    cursor: pointer;
+    align-items: center;
+    font-weight: bold;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+    color: white;
+}
+
+.reject {
+    background-color: #d9534f;
+    color: white;
+    padding: 12px;
+    border-radius: 12px;
+    margin: 10px;
+}
+.accept {
+    background-color: #2c9c69;
+    color: white;
+    padding: 12px;
+    border-radius: 12px;
+    margin: 10px;
 }
