--- a/public/hakkem/css/Universty/IT Admin/Permission.css
+++ b/public/hakkem/css/Universty/IT Admin/Permission.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Gravitas+One&family=Halant:wght@300;400;500;600;700&display=swap");
 
+
+.container1 {
+    display: flex;
+    margin-top: 10px;
+    margin-left: 20px;
+  
+  }
 /* Body */
 a{
     text-decoration: none;
