--- a/public/hakkem/css/Universty/PromotionAdmin/PromotionRequests.css
+++ b/public/hakkem/css/Universty/PromotionAdmin/PromotionRequests.css
@@ -133,6 +133,12 @@ body {
     color: #2f4f4f;
     border: 1px solid #b3d3c6;
 }
+.reject {
+    background-color: #b22626;
+    color: #8a0b0b;
+    border: 1px solid #b3d3c6;
+}
+
 .pay {
     background-color: #f2f2f2;
     border: 1px solid #ccc;
